// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/HeaderFooterTemplate should match snapshot with about link 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  />
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with all links 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  />
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with children 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  >
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with help link 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  />
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with privacy policy link 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  />
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with term of service link 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  />
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot without children 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  />
</div>
`;
